# shit

./: .gitignore  README.md  SETUP.md
UnityReflectionLib/: AssemblyReflector.cs  IPCServer.cs  README.md  ReflectionData.cs  ReflectionMod.cs  UnityReflectionLib.csproj  UnityReflectionManager.cs
UnityReflectionLib/Libs/: README.md
UnityReflectionViewer/: CMakeLists.txt  README.md  build.bat  build.sh
UnityReflectionViewer/src/: ipc_client.cpp  ipc_client.h  main.cpp  reflection_data.cpp  reflection_data.h
UnityReflectionViewer/src/ui/: main_window.cpp  main_window.h
